# secretly

./: flit.ini  pyproject.toml
secretly/: __init__.py  _impl.py  pinentry.scpt
secretly/test/: test_impl.py
